add flex mixins

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -19,3 +19,13 @@
 @mixin DesktopQuery {
     @media (min-width: 64em) { @content; }
 }
+
+
+@mixin flexColumn {
+	display: flex;
+	flex-direction: column;
+}
+@mixin flexRow {
+	display: flex;
+	flex-direction: row;
+}
