add color variables

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -18,3 +18,12 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+//  Fandomonium Colors Scheme
+$color__fan-black: #23120b;
+$color__fan-white: white;
+$color__fan-grey: #F1F1F1;
+$color__fan-main-accent: #2DB1B1;
+$color__fan-secondary-accent: #FFCF55;
+
+
