create fan-body-font variable

--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -5,3 +5,7 @@ $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+// Fandomonium custom font variable 
+$font__fan-body-font: 'Source Sans 3', sans-serif;
+
