project color variable start with $fan

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -19,11 +19,11 @@ $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
-//  Fandomonium Colors Scheme
-$color__fan-black: #23120b;
-$color__fan-white: white;
-$color__fan-grey: #F1F1F1;
-$color__fan-main-accent: #2DB1B1;
-$color__fan-secondary-accent: #FFCF55;
+//  Fandomonium Color Scheme
+$fan-black: #23120b;
+$fan-white: white;
+$fan-grey: #F1F1F1;
+$fan-main-accent: #2DB1B1;
+$fan-secondary-accent: #FFCF55;
 
 
