add button color variables

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -25,5 +25,9 @@ $fan-white: white;
 $fan-grey: #F1F1F1;
 $fan-main-accent: #2DB1B1;
 $fan-secondary-accent: #FFCF55;
+$fan-button-background-default: $fan-black;
+$fan-button-background-invert: $fan-main-accent;
+$fan-button-border-default: $fan-main-accent;
+
 
 
