--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -6,6 +6,16 @@ $font__pre: "Courier 10 Pitch", courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 
+
+
 // Fandomonium custom font variable 
-$font__fan-body-font: 'Source Sans 3', sans-serif;
+$fan-body-font: 'Source Sans 3', sans-serif;
+
+// Fandomonium text sizes
+$fan-h1-size: 3rem;
+$fan-h2-size: 2rem;
+$fan-h3-size: 1rem;
+$fan-p-size: 1rem;
+
+
 
