Style hero section with banner img

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -6,6 +6,10 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 
+/* Hero Section
+--------------------------------------------- */
+@import "content/hero-section";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
