--- a/sass/components/content/_hero-section.scss
+++ b/sass/components/content/_hero-section.scss
@@ -1,3 +1,5 @@
+@use "../../abstracts/mixins/" as *;
+
 // Styling for Hero Section with Banner img
 
 .hero-section {
@@ -5,12 +7,7 @@
 
     .page-title {
         position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        top: 0;
-        width: 100%;
-        height: 100%;
+        @include flexCenter;
         margin: 0;
     }
 
@@ -19,8 +16,7 @@
         height: 300px;
 
         img {
-            width: 100%;
-            height: 100%;
+            @include imgDefault;
         }
     }
 }
