Refactor by moving hero-section style file to its own folder

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -8,7 +8,7 @@
 
 /* Hero Section
 --------------------------------------------- */
-@import "content/hero-section";
+@import "hero/hero-section";
 
 /* Comments
 --------------------------------------------- */
