adjust google map

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -6,6 +6,10 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 
+/* map
+--------------------------------------------- */
+@import "content/map";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
@@ -25,3 +29,6 @@
 /* Galleries
 --------------------------------------------- */
 @import "media/galleries";
+
+
+
