Add styling for no img banner hero

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -10,6 +10,10 @@
 --------------------------------------------- */
 @import "hero/hero-section";
 
+/* Hero when No Banner
+--------------------------------------------- */
+@import "hero/hero-no-banner";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
