Edit styles for banner hero section

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -28,6 +28,7 @@ $fan-secondary-accent: #FFCF55;
 $fan-button-background-default: $fan-black;
 $fan-button-background-invert: $fan-main-accent;
 $fan-button-border-default: $fan-main-accent;
+$fan-banner-title-color: $fan-main-accent;
 
 
 
