--- a/sass/components/hero/_hero-section.scss
+++ b/sass/components/hero/_hero-section.scss
@@ -7,11 +7,15 @@
         position: absolute;
         @include flexCenter;
         margin: 0;
+        text-transform: uppercase;
+        color: $fan-banner-title-color;
+        font-size: $fan-h1-size;
+        font-weight: $fan-title-font-weight;
     }
 
     .post-thumbnail {
         width: 100%;
-        height: 300px;
+        height: 500px;
 
         img {
             @include imgDefault;
