--- a/sass/components/hero/_hero-no-banner.scss
+++ b/sass/components/hero/_hero-no-banner.scss
@@ -3,5 +3,8 @@
 .no-banner-hero {
     .archive-title {
         text-align: center;
+        text-transform: uppercase;
+        font-size: $fan-h1-size;
+        font-weight: $fan-title-font-weight;
     }
 }
