import schedule.scss into components.scss

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -13,6 +13,7 @@
 /* Posts and pages
 --------------------------------------------- */
 @import "content/posts-and-pages";
+@import "content/schedule";
 
 /* Map
 --------------------------------------------- */
