--- a/sass/components/content/_schedule.scss
+++ b/sass/components/content/_schedule.scss
@@ -9,3 +9,20 @@
        
     }
 }
+
+
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+
+    button.active {
+        background-color: #ccc;
+      }
+}
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
