create footer scss partial

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -38,5 +38,6 @@
 --------------------------------------------- */
 @import "media/galleries";
 
-
-
+/* Footer
+--------------------------------------------- */
+@import "footer/footer";
