--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -3,4 +3,19 @@ footer{
     background-color: $fan-black;
     color: $fan-white;
     padding: 1.5rem;
+
+    a,
+    a:hover,
+    a:visited,
+    a:active{
+        color: $fan-white;
+
+    }
+
+    ul{
+        list-style: none;
+        margin: 0 0 2rem 0; // change these numbers later
+        padding: 0; // change these numbers later
+    }
+    
 }
