--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -16,6 +16,10 @@ footer{
         list-style: none;
         margin: 0 0 2rem 0; // change these numbers later
         padding: 0; // change these numbers later
+
+        li a{
+            line-height: 1.75;
+        }
     }
     
 }
