--- a/sass/components/content/_schedule.scss
+++ b/sass/components/content/_schedule.scss
@@ -16,9 +16,9 @@
     border: 1px solid #ccc;
     background-color: #f1f1f1;
 
-    button.active {
+    .tablinks.active {
         background-color: #ccc;
-      }
+    }
 }
 .tabcontent {
     display: none;
