remove margin from h3 and p tags

--- a/sass/components/content/_schedule.scss
+++ b/sass/components/content/_schedule.scss
@@ -5,6 +5,14 @@
         a {
             display: grid;
             grid-template-columns: 1fr 2fr 1fr;
+
+            h3 {
+                margin: 0;
+            }
+
+            p {
+                margin: 0;
+            }
         }
        
     }
