--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -32,6 +32,7 @@ $fan-banner-title-color: $fan-main-accent;
 $fan-header-background-color: $fan-black;
 $fan-header-accent-color: $fan-secondary-accent;
 $fan-text-invert-color: $fan-white;
+$fan-text-hover-color: $fan-main-accent;
 
 
 
