add padding to a tags in footer

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -24,6 +24,7 @@ footer{
 
         li a{
             line-height: 1.75;
+            padding: .5rem;
         }
 
         @media(min-width: 768px /*change this later*/){
