--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -18,6 +18,10 @@
 --------------------------------------------- */
 @import "content/map";
 
+/* Grid-template
+--------------------------------------------- */
+@import "layouts/grid";
+
 /* Comments
 --------------------------------------------- */
 @import "comments/comments";
