--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -5,6 +5,7 @@
 /* Navigation
 --------------------------------------------- */
 @import "navigation/navigation";
+@import "navigation/header-nav";
 
 /* Hero Section
 --------------------------------------------- */
