--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -1,3 +1,5 @@
+// Site Header
+
 .site-header {
     display: flex;
     justify-content: space-between;
@@ -16,73 +18,6 @@
             text-align: left;
             margin: 0;
             color: $fan-header-accent-color;
-        }
-    }
-
-    .main-navigation {
-        width: 25%;
-
-        @include largeTabletQuery {
-            width: 100%;
-        }
-        .menu-toggle {
-            @include tabletQuery {
-                padding: 1rem 3rem;
-                margin: 0;
-                width: 100%;
-            }
-        }
-        .nav-menu {
-            @include largeTabletQuery {
-                justify-content: space-between;
-            }
-            li {
-                @include largeTabletQuery {
-                    font-size: 1rem;
-                    padding: 0 0.5rem;
-                }
-                a {
-                    color: $fan-text-invert-color;
-
-                    &:hover {
-                        color: $fan-text-hover-color;
-                    }
-                }
-            }
-        }
-    }
-    .toggled {
-        .menu-toggle {
-            width: 20%;
-            position: absolute;
-            z-index: 99;
-            top: 2rem;
-        }
-        .menu-main-menu-container {
-            width: 100%;
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            z-index: 80;
-            background-color: $fan-header-background-color;
-            padding: 7rem 2rem 2rem;
-        }
-        .nav-menu {
-            left: 0;
-            right: 0;
-            top: 0;
-
-            li {
-                font-size: 2rem;
-                a {
-                    color: $fan-text-invert-color;
-
-                    &:hover {
-                        color: $fan-text-hover-color;
-                    }
-                }
-            }
         }
     }
 }
