--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -18,6 +18,7 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 @import "content/schedule";
+@import "content/about";
 
 /* Map
 --------------------------------------------- */
