create page bottom scss partial

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -21,6 +21,10 @@
 @import "content/schedule";
 @import "content/about";
 
+/* Page Bottom Template Part
+--------------------------------------------- */
+@import "content/page-bottom";
+
 /* Map
 --------------------------------------------- */
 @import "content/map";
