--- a/sass/components/content/_page-bottom.scss
+++ b/sass/components/content/_page-bottom.scss
@@ -7,11 +7,20 @@
 
         a{
             color: $fan-black;
-            padding: 0.75rem 3rem;
-            width: 183rem;
-            border: 2px solid $fan-black;
-            border-radius: .25rem;
+            text-decoration: none;
             text-transform: uppercase;
+            padding: 0.75rem 3rem;
+            background-color: $fan-white;
+            border: 2px solid $fan-button-border-default;
+            border-radius: .25rem;
+            transition: background-color .3s ease-in;
+
+
+            &:hover{
+                color: $fan-white;
+                background-color: $fan-button-background-invert;
+                transition: background-color .3s ease-in,  color .3s ease-in;
+            }
         }
     }
 }
