begin temporary styles for vendor logo div

--- a/sass/components/content/_page-bottom.scss
+++ b/sass/components/content/_page-bottom.scss
@@ -24,4 +24,14 @@
             }
         }
     }
+
+    
+    .feat-vendors{
+        padding: 0 0 2rem 0;
+
+        div{
+            @include flexRow;
+        }
+    }
+
 }
