--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -20,6 +20,7 @@
 @import "content/posts-and-pages";
 @import "content/schedule";
 @import "content/about";
+@import "content/guest";
 
 /* Map
 --------------------------------------------- */
