Make hero section full width

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -16,7 +16,7 @@
 @mixin largeTabletQuery {
     @media (min-width: 48em) { @content; }
 }
-@mixin DesktopQuery {
+@mixin esktopQuery {
     @media (min-width: 64em) { @content; }
 }
 
