--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -1,80 +1,35 @@
+@use "../abstracts/mixins/mixins" as *;
+
 .site {
 	max-width: 50rem;
 	margin: 0 auto;
 
+	@include esktopQuery {
+		max-width: 2200px;
+		display: grid;
+		grid-template-columns: 1fr minmax(0, 1000px) 1fr;
+		grid-template-areas:
+			"header header header"
+			"hero hero hero"
+			". main ."
+			"footer footer footer";
+	}
+}
+
+.site-header {
+	grid-area: header;
+}
+
+.site-hero {
+	grid-area: hero;
 }
 
 .site-main {
 	overflow: hidden; /* Resolves issue with <pre> elements forcing full width. */
 	padding: 0 1rem;
-
-
+	grid-area: main;
 }
 
-
-@media screen and (min-width: 50em) {
-	.site {
-		max-width: 2200px;
-		display: grid;
-    grid-template-columns: 1fr minmax(0, 1000px) 1fr;
-		grid-template-areas:
-			"header header header"
-			". main ."
-			"footer footer footer";
-	}
-
-
-  // .no-sidebar .site,
-	// .page-template-full-width .site,
-	// .page-id-137 .site, /* About page */
-	// .page-id-85 .site, /* Home page */
-  // .page-id-12 .site,  /* Schedule page */
-  // .page-id-37 .site,  /* Faq page */
-  // .page-id-73 .site,  /* Vendors page */
-  // .page .site,   /* Cart page */
-  // .home .site,
-  // .post-type-archive-product .site,  /* Ticket page */
-	// .post-type-archive-fan-guest .site, /*For guest page */
-	// .single-fan-guest .site /*For singe guest page */ {
-	// 	grid-template-columns: 1fr minmax(0, 1000px) 1fr;
-	// 	grid-template-areas:
-	// 		"header header header"
-	// 		". main ."
-	// 		"footer footer footer";
-	// }
-
-
-	.site-header {
-		grid-area: header;
-  
-	}
-
-	.site-main {
-		grid-area: main;
- 
-	}
-
-
-	.site-footer {
-		grid-area: footer;
-	}
+.site-footer {
+	grid-area: footer;
 }
-
-
-// @media screen and (min-width: 50em) {
-// 	.site-branding {
-// 		text-align: center;
-// 	}
-
-// 	.site-header {
-// 		display: grid;
-// 		grid-template-columns: 1fr minmax(auto, 25rem) minmax(auto, 37.5rem) 1fr;
-// 		justify-content: center;
-// 	}
-
-// 	.site-branding {
-// 		grid-column: 1/3;
-// 		text-align: left;
-// 	}
-
-// }
