Make hero section consistent across pages

--- a/sass/components/hero/_hero-no-banner.scss
+++ b/sass/components/hero/_hero-no-banner.scss
@@ -1,6 +1,6 @@
 // Styling for hero text with no banner
 
-.no-banner-hero {
+.hero-no-img {
     .archive-title {
         text-align: center;
         text-transform: uppercase;
