Change names of hero styling files to be more semantic

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -9,11 +9,8 @@
 
 /* Hero Section
 --------------------------------------------- */
-@import "hero/hero-section";
-
-/* Hero when No Banner
---------------------------------------------- */
-@import "hero/hero-no-banner";
+@import "hero/hero-no-img";
+@import "hero/hero-with-img";
 
 /* Posts and pages
 --------------------------------------------- */
