--- a/sass/components/hero/_hero-no-img.scss
+++ b/sass/components/hero/_hero-no-img.scss
@@ -7,4 +7,10 @@
         font-size: $fan-h1-size;
         font-weight: $fan-title-font-weight;
     }
+    .page-title {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: $fan-h1-size;
+        font-weight: $fan-title-font-weight;
+    }
 }
