--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -16,6 +16,7 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 @import "content/schedule";
+@import "content/single-event";
 @import "content/about";
 @import "content/guest";
 
