--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -20,8 +20,9 @@ $color__background-ins: #fff9c0;
 
 // HEADER & HERO RELATED
 $color__header-background: $fan-black;
-$color__header-accent-color: $color__accent;
+$color__header-accent: $color__accent;
 $color__nav-link: $fan-white;
+$color__nav-link-hover: $color__main;
 $color__hero-img-title: $color__main;
 
 
