--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -18,7 +18,7 @@
 @import "content/schedule";
 @import "content/about";
 @import "content/guest";
-
+@import "content/faq";
 /* Page Bottom Template Part
 --------------------------------------------- */
 @import "content/page-bottom";
