--- a/sass/components/content/_guest.scss
+++ b/sass/components/content/_guest.scss
@@ -9,7 +9,7 @@
 
   .content-view {
      text-decoration: none;
-     color:$fan-main-accent;
+     color:$color__main-accent;
      margin-bottom: 10px;
   }
   
