--- a/sass/components/hero/_hero-with-img.scss
+++ b/sass/components/hero/_hero-with-img.scss
@@ -8,7 +8,7 @@
         @include flexCenter;
         margin: 0;
         text-transform: uppercase;
-        color: $fan-banner-title-color;
+        color: $color__hero-img-title;
         font-size: $fan-h1-size;
         font-weight: $fan-title-font-weight;
     }
