--- a/sass/components/content/_page-bottom.scss
+++ b/sass/components/content/_page-bottom.scss
@@ -13,15 +13,15 @@
             text-decoration: none;
             text-transform: uppercase;
             padding: 0.75rem 3rem;
-            background-color: $fan-white;
-            border: 2px solid $fan-button-border-default;
+            background-color: $color__button_background;
+            border: 2px solid $color__button_border;
             border-radius: .25rem;
             transition: background-color .3s ease-in;
 
 
             &:hover{
-                color: $fan-white;
-                background-color: $fan-button-background-invert;
+                color: $color__button-text-invert;
+                background-color: $color__button_background_invert;
                 transition: background-color .3s ease-in,  color .3s ease-in;
             }
         }
