--- a/sass/components/content/_schedule.scss
+++ b/sass/components/content/_schedule.scss
@@ -5,7 +5,7 @@
     .schedule {
 
         &:nth-of-type(odd) {
-            background-color: $fan-main-accent;
+            background-color: $color__main-accent;
         }
 
         a {
@@ -13,7 +13,7 @@
             grid-auto-rows: 5rem;
             grid-template-columns: minmax(5rem, 1fr) 2fr minmax(5rem, 1fr);
             align-items: center;
-            color: $fan-black;
+            color: $color__link;
             text-decoration: none;
             padding: 0.5rem 1rem;
 
