Create news scss file and link to compiler

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -18,6 +18,7 @@
 @import "content/schedule";
 @import "content/about";
 @import "content/guest";
+@import "content/news";
 
 /* Page Bottom Template Part
 --------------------------------------------- */
