add styles to accordion

--- a/sass/components/content/_faq.scss
+++ b/sass/components/content/_faq.scss
@@ -1,19 +1,30 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
+    font-size: 1rem;
+    padding: .45rem 1rem;
+    margin: -.0625rem;
     width: 100%;
     text-align: left;
-    border: none;
-    outline: none;
+    border: .125rem solid $fan-main-accent;
+    background-color: $fan-white;
     transition: 0.4s;
+    position: relative;
+    &::after{
+        content: '▼';
+        position: absolute;
+        top: 2rem;
+        right: 1rem;
+        margin-left: 1rem;
+    }
   }
   
   /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
   .active, .accordion:hover {
-    background-color: #ccc;
+    border: .125rem solid $fan-main-accent;
+  }
+
+  .active::after{
+    content: '▲';
   }
   
   /* Style the accordion panel. Note: hidden by default */
@@ -22,4 +33,14 @@
     background-color: white;
     display: none;
     overflow: hidden;
+    max-height: 0;
+    transition: max-height .45s;
+  }
+
+ .panel.cakes{
+    display: block;
+    max-height: 100%;
+    border: .125rem solid $fan-main-accent;
+    margin: -.0625rem 0;
+    transition: max-height .45s;
   }
