single-guest-page

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -21,6 +21,7 @@
 @import "content/schedule";
 @import "content/about";
 @import "content/guest";
+@import "content/single-guest";
 
 /* Map
 --------------------------------------------- */
