--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -22,7 +22,12 @@
 
 .event-details-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: $fan-black;
+
+    p {
+        color: $fan-teal;
+    }
 }
 .single-event-guest-container {
     list-style: none;
@@ -51,3 +56,13 @@
     }
   
 }
+
+.heading-container {
+    display: flex;
+    align-items: center;
+
+    a {
+        margin-left: 1rem;
+    }
+}
+
