--- a/sass/components/content/_faq.scss
+++ b/sass/components/content/_faq.scss
@@ -1,8 +1,8 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     font-size: 1rem;
-    padding: .45rem 1rem;
-    margin: -.0625rem;
+    padding: .25rem 1rem;
+    margin: -.125rem;
     width: 100%;
     text-align: left;
     border: .125rem solid $fan-main-accent;
@@ -29,18 +29,17 @@
   
   /* Style the accordion panel. Note: hidden by default */
   .panel {
-    padding: 0 18px;
+    padding: 0 1rem;
+    visibility: hidden;
     background-color: white;
-    display: none;
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height .45s;
-  }
-
- .panel.cakes{
-    display: block;
-    max-height: 100%;
+    height: 0;
     border: .125rem solid $fan-main-accent;
     margin: -.0625rem 0;
-    transition: max-height .45s;
+    transition: height .25s ease-in;
   }
+
+.active+.panel{
+    visibility: visible;
+    height: 116px;
+    transition: height .25s ease-in;
+}
