--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -2,9 +2,7 @@
 .single-event-header {
     margin-top: 2rem;
 
-    img {
-        padding: 1rem 0;
-    }
+   
 
     @include desktopQuery {
         display: flex;
@@ -63,6 +61,37 @@
 
     a {
         margin-left: 1rem;
+    }
+}
+
+.more-events-img-container {
+    max-width: 12rem;
+    height: 9rem;
+
+    img {
+        @include imgDefault
+    }
+}
+
+.more-events-container {
+    gap: 2rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+    margin: auto;
+
+    a {
+        position: relative;
+    }
+
+    h3 {
+        margin: 0;
+        position: absolute;
+        color: $fan-teal;
+        background-color: rgb($fan-black, 0.9);
+        width: 100%;
+        text-align: center;
+        bottom: 0;
     }
 }
 
