change footer bottom colour to fan yellow

--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -57,6 +57,12 @@ footer{
     .footer-bottom{
         @include flexColumn;
         align-items: center;
+
+        cite, 
+        cite a,
+        nav{
+            color: $fan-yellow;
+        }
     }
     
 }
