set size for desktop event img

--- a/sass/components/content/_single-event.scss
+++ b/sass/components/content/_single-event.scss
@@ -3,10 +3,17 @@
     margin-top: 2rem;
 
    
-
     @include desktopQuery {
         display: flex;
     }
+    .event-img-container {
+        img {
+            width: 144rem;
+            height: auto;
+        }
+    }
+
+    
 
 }
 
