--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -20,6 +20,7 @@
 @import "content/about";
 @import "content/guest";
 @import "content/news";
+@import "content/single-news";
 @import "content/single-guest";
 
 /* Page Bottom Template Part
