add faded version of main colors varaibles. for schedule page

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -3,7 +3,9 @@ $fan-black: #131516;
 $fan-white: #fff;
 $fan-offwhite: #F1F1F1;
 $fan-teal: #2DB1B1;
+$fan-teal-faded: #2db1b188;
 $fan-yellow: #FFCF55;
+$fan-yellow-faded: #ffcf5588;
 
 
 // COLOURS
