create styles partial for vendor page

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -22,6 +22,7 @@
 @import "content/faq";
 @import "content/news";
 @import "content/single-guest";
+@import "content/vendors";
 
 /* Page Bottom Template Part
 --------------------------------------------- */
